fix date, location on narrow screens

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -34,6 +34,7 @@ body {
     text-transform: uppercase;
     transform: rotate(-4deg);
     margin-bottom: 100px;
+    text-align: center;
 
     .date {
       display: inline-block;
